# razmenakarata

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml
backend/: Pipfile  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_event_end_date_alter_event_location.py  0002_ticket.py  0003_alter_category_event_alter_package_event.py  0003_rename_user_ticket_owner.py  0004_rename_packet_ticket_package.py  0005_alter_event_options_alter_ticket_options.py  0006_alter_event_options_alter_ticket_options.py  0007_alter_event_thumbnail.py  0008_alter_event_thumbnail.py  0009_alter_event_thumbnail.py
backend/auth/: apps.py  urls.py  views.py
backend/chat/: consumers.py  middlewares.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_remove_chat_single_chat_between_user_and_ticket_and_more.py  0002_rename_buyer_chat_owner_alter_chat_unique_together.py  0003_chat_messages.py  0003_remove_chat_messages_message.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/events/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/events/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_alter_ticket_package.py
backend/razmenakarata/: asgi.py  settings.py  urls.py  wsgi.py
backend/tasks/: apps.py  tasks.py  utils.py  xpaths.py
backend/user/: serializers.py
backend/users/: admin.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  (+2 more)
backend/v1/: urls.py
(+124 files in other folders)
